--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~3.2.4",
     "jQuery": "^1.7.4",
     "materialize-css": "^0.98.2",
+    "runescape-api": "^1.0.9",
     "socket.io": "~0.9.14",
     "superagent": "^3.5.2"
   }
